@@ -6,8 +6,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class TagService {
@@ -19,24 +17,19 @@ public class TagService {
 
     @Transactional
     public Tag createTagFromString(String tagName) {
-        Optional<Tag> existingTag = tagRepository.findByName(tagName);
-        if (existingTag.isPresent()) {
-            return existingTag.get();
-        } else {
-            Tag newTag = new Tag();
-            newTag.setName(tagName);
-            return tagRepository.save(newTag);
-        }
+        return tagRepository.findByName(tagName)
+                .orElseGet(() -> {
+                    Tag newTag = new Tag();
+                    newTag.setName(tagName);
+                    return tagRepository.save(newTag);
+                });
     }
     
     public List<String> getTags(){
         return tagRepository.findAllTags()
                 .orElseThrow(()-> new RuntimeException("tag not found"))
                 .stream()
-                .map(this::convertToTagName) 
-                .collect(Collectors.toList());
-    }
-    private String convertToTagName(Tag tag) {
-        return tag.getName();
+                .map(Tag::getName) 
+                .toList();
     }
 }
